Fixed codeblocks spacing

--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,6 @@
   padding: 12px;
   border-radius: 10px;
 }
-.user_message:focus, .response_message:focus, .editing_message_textview:focus {
+.user_message:focus, .response_message:focus, .editing_message_textview:focus, .code_block:focus {
 	box-shadow: 0 0 1px 2px mix(@accent_color, @window_bg_color, 0.5);
 }
